fix: POST endpoint corrections
