# drs_filer/ga4gh/drs/endpoints/register_new_objects.py
@@ -7,14 +7,6 @@ from flask import (current_app, request)
 from random import choice
 from pymongo.errors import DuplicateKeyError
 
-MAIN_FIELDS_TO_OMIT = ["id", "self_uri"]
-
-ACCESS_FIELDS_TO_OMIT = ["access_id"]
-
-CHARSET = string.ascii_letters + string.digits + ".-_~"
-
-LENGTH = 6
-
 
 def register_new_objects(request: request) -> str:
     """Add new objects to DRS registry.
@@ -36,7 +28,11 @@ def register_new_objects(request: request) -> str:
     while True:
         # Fill in the main fields
         try:
-            generated_object_id = _create_id()
+            id_charset = current_app.config['FOCA'].\
+                endpoints['objects']['id_charset']
+            id_length = current_app.config['FOCA'].\
+                endpoints['objects']['id_length']
+            generated_object_id = _create_id(id_charset, id_length)
             data['id'] = generated_object_id
             data['self_uri'] = \
                 f"drs://{current_app.config['FOCA'].server.host}/{data['id']}"
@@ -61,44 +57,25 @@ def _prepare_access_data(data: Dict) -> Dict:
         The modified data suitable for registering.
     """
 
-    # Delete the main fields first
-    for field in MAIN_FIELDS_TO_OMIT:
-        try:
-            del data[field]
-        except KeyError:
-            pass
-
+    # Generate the access_ids
     try:
         access_data = data["access_methods"]
-
-        # Delete access_fields
-        for field in ACCESS_FIELDS_TO_OMIT:
-            for method in access_data:
-                try:
-                    del method[field]
-                except KeyError:
-                    pass
-    except KeyError:
-        pass
-
-    # Fill in the access_ids first
-
-    try:
-        access_data = data["access_methods"]
-
+        id_charset = current_app.config['FOCA'].\
+            endpoints['access_methods']['id_charset']
+        id_length = current_app.config['FOCA'].\
+            endpoints['access_methods']['id_length']
         access_id_set = set()
-        for field in ACCESS_FIELDS_TO_OMIT:
-            for method in access_data:
-                generated_access_id = _create_id()
-                if generated_access_id not in access_id_set:
-                    method[field] = generated_access_id
-                    access_id_set.add(generated_access_id)
+        for method in access_data:
+            generated_access_id = _create_id(id_charset, id_length)
+            if generated_access_id not in access_id_set:
+                method['access_id'] = generated_access_id
+                access_id_set.add(generated_access_id)
     except KeyError:
         pass
 
     return data
 
 
-def _create_id() -> str:
+def _create_id(charset, length) -> str:
     """Creates random ID."""
-    return ''.join(choice(CHARSET) for __ in range(LENGTH))
+    return ''.join(choice(charset) for __ in range(length))
